camel-infinispan: fixed deprecation warnings about wrapper types in test code (#4160)